--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,11 @@ spring:
       port: 35730
     restart:
       exclude: templates/**
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 300KB
+      max-request-size: 10MB
 output:
     ansi:
       enabled: ALWAYS
