--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: kozos
+      MYSQL_DATABASE: kassza
       MYSQL_USER: progmatic
       MYSQL_PASSWORD: progmatic
     ports:
